# Paperdays

./: .logo.png-autosave.kra  0.level  CMakeLists.txt  README.md  installer.ifp  logo.png.kra  mod.json  resources.hpp  support.md
.github/workflows/: multi-platform.yml
assets/files/: flashes1.kra  flashes10.png.kra  flashes11.png.kra  flashes12.png.kra  flashes13.png.kra  flashes14.png.kra  flashes15.png.kra  flashes2.kra  flashes3.kra  flashes4.png.kra  flashes5.png.kra  flashes6.png.kra  flashes7.png.kra  flashes8.png.kra  flashes9.png.kra  goldFont-hd.fnt  goldFont-uhd.fnt  goldFont.fnt  ui.colors.json
assets/files/levels/: properdies_3.level  properdies_301.level  properdies_4.level
assets/files/part1/: ua1.gmd
assets/frames/gj3/: GJ_practiceComplete_001.png~
assets/spritesheet/geode.loader/: geode.loader[.!SUB_DIR]mods-list-top-gd.png~  geode.loader[.!SUB_DIR]mods-list-top.png~
include/: MDInfoAlertButton.hpp  SahderLayer.hpp  ViewportLayer.hpp  _main.hpp
resources/icons/: bird_01.plist
src/: _main.cpp  game.hpp  interface.cpp  main.cpp  objects.cpp  player.cpp  player.hpp  random.cpp  resources.hpp
